Linking css file and Pull requests

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <h2 class="heading">H2 Heading</h2>
     <h3 class="heading">H3 Heading</h3>
     <br>
-    <button>Click me</button>
-
+    <button style="background-color: pink;">Click me</button>
+    <style>
+        button{
+            background-color: blue;
+        }
+    </style>
+    <link rel="stylesheet" href="first.css">
 </body>
 </html>
