--- a/practiceset3.html
+++ b/practiceset3.html
@@ -8,8 +8,16 @@
 </head>
 <body>
     <!-- <p>Problem 1</p> -->
-    <div id="div1"> </div>
+    <!-- <div id="div1"> </div> -->
 
-
+    <!-- <p>Problem 2</p> -->
+    <div id="navbar">
+        <a id="logo" href="">Amazon</a>
+        <a href="">My Account</a>
+        <a href="">My Cart</a>
+        <a href="">Contact Us</a>
+        <input placeholder="Search Amazon.in">
+        <button id="searchbutton">Search</button>
+    </div>
 </body>
 </html>
