--- a/practiceset3.html
+++ b/practiceset3.html
@@ -16,7 +16,7 @@
         <a href="">My Account</a>
         <a href="">My Cart</a>
         <a href="">Contact Us</a>
-        <input placeholder="Search Amazon.in">
+        <input TYPE="text" placeholder="Search Amazon.in">
         <button id="searchbutton">Search</button>
     </div>
 </body>
