--- a/practiceset3.html
+++ b/practiceset3.html
@@ -12,7 +12,7 @@
 
     <!-- <p>Problem 2</p> -->
     <div id="navbar">
-        <a id="logo" href="">Amazon</a>
+        <a id="logo" href="">Amazon.in</a>
         <a href="">My Account</a>
         <a href="">My Cart</a>
         <a href="">Contact Us</a>
