--- a/practiceset4.html
+++ b/practiceset4.html
@@ -10,7 +10,7 @@
     <header>
         <div>
             <a href="" id="logo">Amazon.in</a>
-            <a href="">Acoount</a>
+            <a href="">Account</a>
             <a href="">My Cart</a>
             <a href="">Contact Us</a>
             <input type="text" placeholder="Search Amazon.in">
