--- a/practiceset4.html
+++ b/practiceset4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="maindiv">
             <a href="" id="logo">Amazon.in</a>
             <a href="">Account</a>
             <a href="">My Cart</a>
@@ -17,5 +17,8 @@
             <button id="search">Search</button>
         </div>
     </header>
+    <div id="div1" class="one"></div>
+    <div id="div2" class="one"></div>
+    <div id="div3" class="one"></div>
 </body>
 </html>
