--- a/practiceset4.html
+++ b/practiceset4.html
@@ -20,5 +20,8 @@
     <div id="div1" class="one"></div>
     <div id="div2" class="one"></div>
     <div id="div3" class="one"></div>
+    <footer>
+        This is a practice set solution.
+    </footer>
 </body>
 </html>
