--- a/practiceset4.html
+++ b/practiceset4.html
@@ -17,13 +17,18 @@
             <button id="search">Search</button>
         </div>
     </header>
-    
+
+    <div id="content">
     <div id="div1" class="one"></div>
     <div id="div2" class="one"></div>
     <div id="div3" class="one"></div>
+    </div>
 
     <footer>
-        This is a practice set solution.
+        <div id="foot">
+            made with &hearts; by Sumit Bhagat <br>
+            &#169; 1996-2024, Amazon.com, Inc. or its affiliates
+        </div>
     </footer>
 </body>
 </html>
