more of practice set 6

--- a/practiceset6.html
+++ b/practiceset6.html
@@ -13,5 +13,9 @@
         <a href="">My Orders</a>
         <a href="">My Wishlist</a>
     </div>
+
+    <div id="outer">
+        <div id="inner"></div>
+    </div>
 </body>
 </html>
